--- a/index.html
+++ b/index.html
@@ -96,9 +96,7 @@
                                 <span class="badge badge-primary">2007 - 2011</span>
                                 <h6 class="time-line-item-title">Lead Software / System Engineer</h6>
                                 <p class="time-line-item-subtitle">Mach1 Computing</p>
-                                <p class="time-line-item-content">Mauris magna sapien, pharetra consectetur fringilla
-                                    vitae, interdum sed
-                                    tortor.
+                                <p class="time-line-item-content">Design, install and support Linux and Unix cluster systems for companies such as Northrop Grumman and Newport News Shipbuilding. Specializing in tailoring each HPC to client needs via extensive benchmarking and system tuning. Custom software development for managing job queues and cluster administration.
                                 </p>
                             </li>
                         </ul>
