--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <main>
             <section class="intro-section">
                 <h2 class="section-title">Hello, my name is Micah Nerren</h2>
-                <p>I am a creative, detail-oriented, full stack software engineer. With a proven track record of creating and implementing successful front and back end applications, I am looking to bring my skills to a tech company with global reach.</p>
+                <p>I am a creative, detail-oriented, full stack software engineer. With a proven track record of creating and implementing successful front and back end applications, I am looking to bring my skills to a tech company with global reach. Making things come to life is my passion. With decades of experience in all manner of software development, systems engineering and making the seemingly impossible, possible - I can help you achieve your vision.</p>
                 <!-- <a href="mailto:mnerren@gmail.com" target="_blank" class="btn btn-primary btn-hire-me">HIRE ME</a> -->
             </section>
             <section class="resume-section">
