--- a/portfolio.html
+++ b/portfolio.html
@@ -67,6 +67,11 @@
             </div>
         </aside>
         <main>
+            <section class="intro-section">
+                <h2 class="section-title">About Me</h2>
+                <p>As an avid maker and tinkerer, I have a wide array of interests. From making LED's come alive out in the desert, to growing the perfect tomato. I funnel this passion into every project I dive into, whether that is cooking a wonderful meal, or turning a clients vision into reality. I am adept at seeing the nuance and essential ideas of any project, large and small. Everything deserves to be done the best it can be, and I strive to make that happen.</p>
+                <!-- <a href="mailto:mnerren@gmail.com" target="_blank" class="btn btn-primary btn-hire-me">HIRE ME</a> -->
+            </section>
             <section class="portfolio-section">
                 <h2 class="section-title">PORTFOLIO</h2>
                 
