--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <h5 class="widget-title">personal information</h5>
                 <div class="widget-content">
                     <p>WEBSITE : <a href="https://github.com/gitcyco">Github</a></p>
-                    <p>PHONE : +1 657 319 5261</p>
+                    <!-- <p>PHONE : +1 657 319 5261</p> -->
                     <p>MAIL : <a href="mailto:mnerren@gmail.com" target="_blank" class="">mnerren@gmail.com</a></p>
                     <p>Location : Fullerton, California</p>
                     <!-- <button class="btn btn-download-cv btn-primary rounded-pill"> <img src="assets/images/download.svg" alt="download"
