--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Software Engineering</h5>
-                            <p class="service-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed
-                                tortor.</p>
+                            <p class="service-description"></p>
                         </div>
                     </div>
                     <div class="media service-card col-lg-6">
@@ -151,9 +150,7 @@
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">System Administration</h5>
-                            <p class="service-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed
-                                tortor.
-                            </p>
+                            <p class="service-description"></p>
                         </div>
                     </div>
                     <div class="media service-card col-lg-6">
@@ -162,9 +159,7 @@
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">System Design</h5>
-                            <p class="service-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed
-                                tortor.
-                            </p>
+                            <p class="service-description"></p>
                         </div>
                     </div>
                     <div class="media service-card col-lg-6">
@@ -173,9 +168,7 @@
                         </div>
                         <div class="media-body">
                             <h5 class="service-title">Needs Analysis</h5>
-                            <p class="service-description">Mauris magna sapien, pharetra consectetur fringilla vitae, interdum sed
-                                tortor.
-                            </p>
+                            <p class="service-description"></p>
                         </div>
                     </div>
                 </div>
