--- a/index.html
+++ b/index.html
@@ -82,9 +82,7 @@
                                 <span class="badge badge-primary">2011 - Current</span>
                                 <h6 class="time-line-item-title">Software Engineer</h6>
                                 <p class="time-line-item-subtitle">Freelance</p>
-                                <p class="time-line-item-content">Mauris magna sapien, pharetra consectetur fringilla
-                                    vitae, interdum sed
-                                    tortor.</p>
+                                <p class="time-line-item-content">Created and maintained a wide array of  applications and systems for clients small and large.</p>
                             </li>
                             <li class="time-line-item">
                                 <span class="badge badge-primary">2011 - 2018</span>
